# SOCMINT-PROJECT

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GNUmakefile  Makefile  README.md  RUNBOOK.md  docker-compose.local-web.yml  docker-compose.scanners.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-scanners.txt  requirements.txt
docs/: 46_MONTREAL_ADAPTER_MODES.md  EVIDENCE_OS_V39_BUILD.md  LOCAL_REBUILD_V10_2.md  OPERATOR_ONBOARDING.md  PRIVACY_POLICY.md  PRODUCTION_DEPLOYMENT_PACK.md  PUBLIC_BETA_CHECKLIST.md  RESPONSIBLE_USE_POLICY.md  SOCMINT_DOSSIER_SPINE_SPEC.md  TERMS_OF_USE.md  TROUBLESHOOTING.md  ULTIMATE_SOCMINT_PRODUCT_BUILD_SPEC.md  UPDATED_ULTIMATE_SOCMINT_PRODUCT_BUILD_SPEC.md  VERSIONING_POLICY.md
migrations/: env.py
release/: BRANCH_INVENTORY_V9_6.md  CURRENT_STATUS.json  OPEN_PR_QUEUE_CLOSURE.md  OPERATOR_RELEASE_HEALTH.json  RELEASE_CLEANUP_CHECKLIST_V9_6.md  V10_0_0_PRODUCT_ARCHITECTURE_MANIFEST.json  V10_0_0_PRODUCT_ARCHITECTURE_MANIFEST.md  V10_0_0_PRODUCT_FOUNDATION_HARDENING_REPORT.json  V10_0_0_PRODUCT_FOUNDATION_HARDENING_REPORT.md  V10_0_0_PRODUCT_V10_FOUNDATION_CLEAN_ARCHITECTURE_SPLIT.md  V10_0_1_PRODUCT_ROUTE_EXTRACTION_PHASE_1.md  V10_0_1_ROUTE_EXTRACTION_HARDENING_REPORT.json  V10_0_1_ROUTE_EXTRACTION_HARDENING_REPORT.md  V10_0_2_POST_RELEASE_EXTRACTION_HARDENING_REPORT.json  V10_0_2_POST_RELEASE_EXTRACTION_HARDENING_REPORT.md  V10_0_2_PRODUCT_ROUTE_EXTRACTION_PHASE_2.md  V10_0_4_PRODUCT_MODULE_REGISTRY.json  (+583 more)
(+1801 files in other folders)
