[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socmint"
version = "12.10.29"
description = "SOCMINT Full Profile Dossier Generator"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "requests",
    "beautifulsoup4",
    "tweepy",
    "facebook-sdk",
    "selenium",
    "instaloader",
    "social-analyzer",
    "socialscan",
    "phoneinfoga",
    "sqlalchemy",
    "flask",
    "flask-cors",
    "flask-sqlalchemy",
    "python-dotenv",
    "requests-cache",
    "email-validator",
    "phonenumbers",
    "flask-httpauth",
    "gunicorn",
    "alembic",
    "psycopg[binary]",
    "PySocks",
    "pytest",
    "pytest-mock"
]

[project.scripts]
socmint = "socmint.main:main"

[tool.ruff.lint]
ignore = ["E501", "F401"]